@@ -1,9 +1,9 @@
 package org.folio.inventory.dataimport.handlers.actions.util;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertFalse;
-import static org.junit.Assert.assertNotNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import com.google.common.collect.Lists;
 import java.util.ArrayList;
@@ -16,12 +16,12 @@ import org.folio.Instance;
 import org.folio.inventory.domain.instances.InstanceRelationshipToChild;
 import org.folio.inventory.domain.instances.InstanceRelationshipToParent;
 import org.folio.inventory.support.InstanceUtil;
-import org.junit.Test;
+import org.junit.jupiter.api.Test;
 
-public class InstanceUtilTest {
+class InstanceUtilTest {
 
   @Test
-  public void shouldMergeInstances() {
+  void shouldMergeInstances() {
     Set<AlternativeTitle> alternativeTitles = new HashSet<>();
     alternativeTitles.add(new AlternativeTitle()
       .withAlternativeTitle("alt1")
@@ -84,7 +84,7 @@ public class InstanceUtilTest {
     assertEquals("30773a27-b485-4dab-aeb6-b8c04fa3cb17", instance.getId());
     assertEquals("in000000001", instance.getHrid());
     assertEquals("30773a27-b485-4dab-aeb6-b8c04fa3cb18", instance.getModeOfIssuanceId());
-    assertEquals(contributors.get(0).getName(), instance.getContributors().get(0).name);
+    assertEquals(contributors.getFirst().getName(), instance.getContributors().getFirst().name);
 
 
     assertEquals(statisticalCodeIds, instance.getStatisticalCodeIds());
@@ -98,14 +98,14 @@ public class InstanceUtilTest {
     assertEquals(natureOfContentTermIds, instance.getNatureOfContentTermIds());
     assertNotNull(instance.getTags());
     assertEquals(tagList, instance.getTags());
-    assertEquals("30773a27-b485-4dab-aeb6-b8c04fa3cb19", instance.getParentInstances().get(0).getId());
-    assertEquals("30773a27-b485-4dab-aeb6-b8c04fa3cb19", instance.getChildInstances().get(0).getId());
+    assertEquals("30773a27-b485-4dab-aeb6-b8c04fa3cb19", instance.getParentInstances().getFirst().getId());
+    assertEquals("30773a27-b485-4dab-aeb6-b8c04fa3cb19", instance.getChildInstances().getFirst().getId());
     assertEquals("Adm note1", instance.getAdministrativeNotes().get(0));
     assertEquals("Adm note2", instance.getAdministrativeNotes().get(1));
   }
 
   @Test
-  public void mergeFieldsWithNullVersion() {
+  void mergeFieldsWithNullVersion() {
     org.folio.inventory.domain.instances.Instance existing =
       new org.folio.inventory.domain.instances.Instance("id", null, "IN00001", "source", "title", "instanceTypeId");
 
@@ -116,7 +116,7 @@ public class InstanceUtilTest {
   }
 
   @Test
-  public void mergeInstanceWithSourceUri() {
+  void mergeInstanceWithSourceUri() {
     org.folio.inventory.domain.instances.Instance existing =
       new org.folio.inventory.domain.instances.Instance("30773a27-b485-4dab-aeb6-b8c04fa3cb17", 1, "in000000001",
         "source", "title", "30773a27-b485-4dab-aeb6-b8c04fa3cb19");
