@@ -1,42 +1,5 @@
 package org.folio.inventory.dataimport.services;
 
-import com.github.tomakehurst.wiremock.client.WireMock;
-import com.github.tomakehurst.wiremock.common.Slf4jNotifier;
-import com.github.tomakehurst.wiremock.core.WireMockConfiguration;
-import com.github.tomakehurst.wiremock.junit.WireMockRule;
-import com.github.tomakehurst.wiremock.matching.RegexPattern;
-import com.github.tomakehurst.wiremock.matching.UrlPathPattern;
-import com.google.common.collect.Lists;
-import io.vertx.core.Future;
-import io.vertx.core.Vertx;
-import io.vertx.core.http.HttpClient;
-import io.vertx.core.json.Json;
-import io.vertx.core.json.JsonObject;
-import io.vertx.ext.unit.Async;
-import io.vertx.ext.unit.TestContext;
-import io.vertx.ext.unit.junit.VertxUnitRunner;
-import org.folio.ActionProfile;
-import org.folio.DataImportEventPayload;
-import org.folio.JobProfile;
-import org.folio.MappingProfile;
-import org.folio.inventory.common.Context;
-import org.folio.inventory.dataimport.cache.ProfileSnapshotCache;
-import org.folio.inventory.dataimport.handlers.matching.util.EventHandlingUtil;
-import org.folio.rest.jaxrs.model.EntityType;
-import org.folio.rest.jaxrs.model.ProfileSnapshotWrapper;
-import org.folio.rest.jaxrs.model.Record;
-import org.junit.After;
-import org.junit.Before;
-import org.junit.BeforeClass;
-import org.junit.Rule;
-import org.junit.Test;
-import org.junit.runner.RunWith;
-import org.mockito.MockitoAnnotations;
-
-import java.util.Collections;
-import java.util.HashMap;
-import java.util.UUID;
-
 import static com.github.tomakehurst.wiremock.client.WireMock.get;
 import static java.lang.Boolean.parseBoolean;
 import static org.folio.ActionProfile.Action.CREATE;
@@ -50,50 +13,71 @@ import static org.folio.rest.jaxrs.model.EntityType.ORDER;
 import static org.folio.rest.jaxrs.model.ProfileType.ACTION_PROFILE;
 import static org.folio.rest.jaxrs.model.ProfileType.JOB_PROFILE;
 import static org.folio.rest.jaxrs.model.ProfileType.MAPPING_PROFILE;
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertNull;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
-@RunWith(VertxUnitRunner.class)
-public class OrderHelperServiceTest {
+import com.github.tomakehurst.wiremock.client.WireMock;
+import com.github.tomakehurst.wiremock.matching.RegexPattern;
+import com.github.tomakehurst.wiremock.matching.UrlPathPattern;
+import com.google.common.collect.Lists;
+import io.vertx.core.Future;
+import io.vertx.core.Vertx;
+import io.vertx.core.http.HttpClient;
+import io.vertx.core.json.Json;
+import io.vertx.core.json.JsonObject;
+import io.vertx.junit5.VertxExtension;
+import io.vertx.junit5.VertxTestContext;
+import java.util.Collections;
+import java.util.HashMap;
+import java.util.UUID;
+import org.folio.ActionProfile;
+import org.folio.DataImportEventPayload;
+import org.folio.JobProfile;
+import org.folio.MappingProfile;
+import org.folio.dataimport.testsupport.rest.BaseWireMockTest;
+import org.folio.inventory.common.Context;
+import org.folio.inventory.dataimport.cache.ProfileSnapshotCache;
+import org.folio.inventory.dataimport.handlers.matching.util.EventHandlingUtil;
+import org.folio.rest.jaxrs.model.EntityType;
+import org.folio.rest.jaxrs.model.ProfileSnapshotWrapper;
+import org.folio.rest.jaxrs.model.Record;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.extension.ExtendWith;
+import org.mockito.MockitoAnnotations;
+
+@ExtendWith(VertxExtension.class)
+class OrderHelperServiceTest extends BaseWireMockTest {
+
   private static final String JOB_PROFILE_URL = "/data-import-profiles/jobProfileSnapshots";
+  private static final String JOB_PROFILE_SNAPSHOT_ID = "JOB_PROFILE_SNAPSHOT_ID";
   private static final String TENANT_ID = "diku";
-  public static final String JOB_PROFILE_SNAPSHOT_ID = "JOB_PROFILE_SNAPSHOT_ID";
-  public static final String DI_ORDER_READY_FOR_POST_PROCESSING = "DI_ORDER_READY_FOR_POST_PROCESSING";
-  private OrderHelperService orderHelperService;
   private static Vertx vertx;
+  private OrderHelperService orderHelperService;
   private AutoCloseable mocks;
   private HttpClient client;
 
-  @Rule
-  public WireMockRule mockServer = new WireMockRule(
-    WireMockConfiguration.wireMockConfig()
-      .dynamicPort()
-      .notifier(new Slf4jNotifier(true)));
-
-  @BeforeClass
-  public static void setUpClass() {
+  @BeforeAll
+  static void setUpClass() {
     vertx = Vertx.vertx();
   }
 
-  @Before
-  public void setUp() {
+  @BeforeEach
+  void setUp() {
     mocks = MockitoAnnotations.openMocks(this);
 
     client = vertx.createHttpClient();
-
   }
 
-  @After
-  public void tearDown() throws Exception {
+  @AfterEach
+  void tearDown() throws Exception {
     mocks.close();
   }
 
-
   @Test
-  public void shouldFillPayloadIfOrderActionProfileExistsAndCurrentProfileIsTheLastOne(TestContext testContext) {
-    Async async = testContext.async();
-
+  void shouldFillPayloadIfOrderActionProfileExistsAndCurrentProfileIsTheLastOne(VertxTestContext testContext) {
     JobProfile jobProfile = new JobProfile()
       .withId(UUID.randomUUID().toString())
       .withName("Create Instance and Order")
@@ -159,33 +143,34 @@ public class OrderHelperServiceTest {
       .withJobExecutionId(UUID.randomUUID().toString())
       .withContext(payloadContext)
       .withTenant(TENANT_ID)
-      .withOkapiUrl(mockServer.baseUrl())
+      .withOkapiUrl(WIRE_MOCK.baseUrl())
       .withToken("test-token")
       .withCurrentNode(new ProfileSnapshotWrapper().withProfileId(instanceMappingProfile.getId()));
-    Context context = EventHandlingUtil.constructContext(dataImportEventPayload.getTenant(), dataImportEventPayload.getToken(), dataImportEventPayload.getOkapiUrl());
+    Context context =
+      EventHandlingUtil.constructContext(dataImportEventPayload.getTenant(), dataImportEventPayload.getToken(),
+        dataImportEventPayload.getOkapiUrl());
 
     WireMock.stubFor(get(new UrlPathPattern(new RegexPattern(JOB_PROFILE_URL + "/.*"), true))
       .willReturn(WireMock.ok().withBody(Json.encode(profileSnapshotWrapper))));
 
     orderHelperService = new OrderHelperServiceImpl(new ProfileSnapshotCache(vertx, client, 3600));
     //when
-    Future<Void> future = orderHelperService.fillPayloadForOrderPostProcessingIfNeeded(dataImportEventPayload, DI_INVENTORY_INSTANCE_CREATED, context);
+    Future<Void> future = orderHelperService.fillPayloadForOrderPostProcessingIfNeeded(dataImportEventPayload,
+      DI_INVENTORY_INSTANCE_CREATED, context);
 
     // then
-
-    future.onComplete(ar -> {
-      testContext.assertTrue(ar.succeeded());
-      testContext.assertEquals(dataImportEventPayload.getEventType(), DI_ORDER_CREATED_READY_FOR_POST_PROCESSING.value());
-      testContext.assertEquals(dataImportEventPayload.getEventsChain().get(0), DI_INVENTORY_INSTANCE_CREATED.value());
-      testContext.assertTrue(parseBoolean(dataImportEventPayload.getContext().get(POST_PROCESSING_INDICATOR)));
-      async.complete();
-    });
+    future.onComplete(ar -> testContext.verify(() -> {
+      assertTrue(ar.succeeded());
+      assertEquals(dataImportEventPayload.getEventType(), DI_ORDER_CREATED_READY_FOR_POST_PROCESSING.value());
+      assertEquals(dataImportEventPayload.getEventsChain().getFirst(), DI_INVENTORY_INSTANCE_CREATED.value());
+      assertTrue(parseBoolean(dataImportEventPayload.getContext().get(POST_PROCESSING_INDICATOR)));
+      testContext.completeNow();
+    }));
   }
 
   @Test
-  public void shouldNotFillPayloadEventIfOrderActionProfileNotExistsAndCurrentProfileIsTheLastOne(TestContext testContext) {
-    Async async = testContext.async();
-
+  void shouldNotFillPayloadEventIfOrderActionProfileNotExistsAndCurrentProfileIsTheLastOne(
+    VertxTestContext testContext) {
     JobProfile jobProfile = new JobProfile()
       .withId(UUID.randomUUID().toString())
       .withName("Create Instance and Order")
@@ -251,31 +236,32 @@ public class OrderHelperServiceTest {
       .withJobExecutionId(UUID.randomUUID().toString())
       .withContext(payloadContext)
       .withTenant(TENANT_ID)
-      .withOkapiUrl(mockServer.baseUrl())
+      .withOkapiUrl(WIRE_MOCK.baseUrl())
       .withToken("test-token")
       .withCurrentNode(new ProfileSnapshotWrapper().withProfileId(instanceMappingProfile.getId()));
-    Context context = EventHandlingUtil.constructContext(dataImportEventPayload.getTenant(), dataImportEventPayload.getToken(), dataImportEventPayload.getOkapiUrl());
+    Context context =
+      EventHandlingUtil.constructContext(dataImportEventPayload.getTenant(), dataImportEventPayload.getToken(),
+        dataImportEventPayload.getOkapiUrl());
 
     WireMock.stubFor(get(new UrlPathPattern(new RegexPattern(JOB_PROFILE_URL + "/.*"), true))
       .willReturn(WireMock.ok().withBody(Json.encode(profileSnapshotWrapper))));
 
     orderHelperService = new OrderHelperServiceImpl(new ProfileSnapshotCache(vertx, client, 3600));
     //when
-    Future<Void> future = orderHelperService.fillPayloadForOrderPostProcessingIfNeeded(dataImportEventPayload, DI_INVENTORY_INSTANCE_CREATED, context);
+    Future<Void> future = orderHelperService.fillPayloadForOrderPostProcessingIfNeeded(dataImportEventPayload,
+      DI_INVENTORY_INSTANCE_CREATED, context);
 
     // then
-    future.onComplete(ar -> {
-      testContext.assertTrue(ar.succeeded());
-      assertEquals(dataImportEventPayload.getEventType(), "TEST_EVENT");
-      assertEquals(dataImportEventPayload.getEventsChain().size(), 0);
-      async.complete();
-    });
+    future.onComplete(ar -> testContext.verify(() -> {
+      assertTrue(ar.succeeded());
+      assertEquals("TEST_EVENT", dataImportEventPayload.getEventType());
+      assertEquals(0, dataImportEventPayload.getEventsChain().size());
+      testContext.completeNow();
+    }));
   }
 
   @Test
-  public void shouldNotFillPayloadIfOrderActionProfileExistsAndCurrentProfileIsNotTheLastOne(TestContext testContext) {
-    Async async = testContext.async();
-
+  void shouldNotFillPayloadIfOrderActionProfileExistsAndCurrentProfileIsNotTheLastOne(VertxTestContext testContext) {
     JobProfile jobProfile = new JobProfile()
       .withId(UUID.randomUUID().toString())
       .withName("Create Instance and Order")
@@ -341,10 +327,12 @@ public class OrderHelperServiceTest {
       .withJobExecutionId(UUID.randomUUID().toString())
       .withContext(payloadContext)
       .withTenant(TENANT_ID)
-      .withOkapiUrl(mockServer.baseUrl())
+      .withOkapiUrl(WIRE_MOCK.baseUrl())
       .withToken("test-token")
       .withCurrentNode(new ProfileSnapshotWrapper().withProfileId(orderMappingProfile.getId()));
-    Context context = EventHandlingUtil.constructContext(dataImportEventPayload.getTenant(), dataImportEventPayload.getToken(), dataImportEventPayload.getOkapiUrl());
+    Context context =
+      EventHandlingUtil.constructContext(dataImportEventPayload.getTenant(), dataImportEventPayload.getToken(),
+        dataImportEventPayload.getOkapiUrl());
 
     WireMock.stubFor(get(new UrlPathPattern(new RegexPattern(JOB_PROFILE_URL + "/.*"), true))
       .willReturn(WireMock.ok().withBody(Json.encode(profileSnapshotWrapper))));
@@ -352,15 +340,15 @@ public class OrderHelperServiceTest {
     orderHelperService = new OrderHelperServiceImpl(new ProfileSnapshotCache(vertx, client, 3600));
 
     //when
-    Future<Void> future = orderHelperService.fillPayloadForOrderPostProcessingIfNeeded(dataImportEventPayload, DI_INVENTORY_INSTANCE_CREATED, context);
+    Future<Void> future = orderHelperService.fillPayloadForOrderPostProcessingIfNeeded(dataImportEventPayload,
+      DI_INVENTORY_INSTANCE_CREATED, context);
 
     // then
-    future.onComplete(ar -> {
-      testContext.assertTrue(ar.succeeded());
-      assertEquals(dataImportEventPayload.getEventType(), "TEST_EVENT");
-      assertEquals(dataImportEventPayload.getEventsChain().size(), 0);
-      async.complete();
-    });
+    future.onComplete(ar -> testContext.verify(() -> {
+      assertTrue(ar.succeeded());
+      assertEquals("TEST_EVENT", dataImportEventPayload.getEventType());
+      assertEquals(0, dataImportEventPayload.getEventsChain().size());
+      testContext.completeNow();
+    }));
   }
-
 }
