@@ -1,10 +1,6 @@
 package support.fakes;
 
 import io.vertx.core.json.JsonObject;
-import org.apache.commons.lang3.StringUtils;
-import org.apache.commons.lang3.tuple.ImmutablePair;
-import org.apache.commons.lang3.tuple.ImmutableTriple;
-
 import java.net.URLDecoder;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
@@ -16,9 +12,18 @@ import java.util.function.Predicate;
 import java.util.function.Supplier;
 import java.util.regex.Matcher;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
+import org.apache.commons.lang3.StringUtils;
+import org.apache.commons.lang3.Strings;
+import org.apache.commons.lang3.tuple.ImmutablePair;
+import org.apache.commons.lang3.tuple.ImmutableTriple;
+import org.apache.logging.log4j.LogManager;
+import org.apache.logging.log4j.Logger;
+import org.folio.inventory.storage.external.AbstractExternalStorageTest;
 
 public class FakeCQLToJSONInterpreter {
+
+  private static final Logger LOGGER = LogManager.getLogger(FakeCQLToJSONInterpreter.class);
+
   // " or ) at the left and a-z at right
   private static final String OR_REGEX = "(?<=[\")]) or (?=[a-z])";
   private static final Pattern PATTERN = Pattern.compile(OR_REGEX);
@@ -32,43 +37,39 @@ public class FakeCQLToJSONInterpreter {
     var query = encodedQuery == null ? null : URLDecoder.decode(encodedQuery, StandardCharsets.UTF_8);
     ImmutablePair<String, String> queryAndSort = splitQueryAndSort(query);
 
-    if(containsSort(queryAndSort)) {
+    if (containsSort(queryAndSort)) {
       printDiagnostics(() -> String.format("Search by: %s", queryAndSort.left));
       printDiagnostics(() -> String.format("Sort by: %s", queryAndSort.right));
 
       return records.stream()
         .filter(filterForQuery(queryAndSort.left))
         .sorted(sortForQuery(queryAndSort.right))
-        .collect(Collectors.toList());
-    }
-    else {
+        .toList();
+    } else {
       printDiagnostics(() -> String.format("Search only by: %s", queryAndSort.left));
 
       return records.stream()
         .filter(filterForQuery(queryAndSort.left))
-        .collect(Collectors.toList());
+        .toList();
     }
   }
 
   private Comparator<? super JsonObject> sortForQuery(String sort) {
-    if(StringUtils.contains(sort, "/")) {
+    if (Strings.CS.contains(sort, "/")) {
       String propertyName = StringUtils.substring(sort, 0,
-        StringUtils.lastIndexOf(sort, "/")).trim();
+        Strings.CS.lastIndexOf(sort, "/")).trim();
 
       String ordering = StringUtils.substring(sort,
-        StringUtils.lastIndexOf(sort, "/") + 1).trim();
+        Strings.CS.lastIndexOf(sort, "/") + 1).trim();
 
-      if(StringUtils.containsIgnoreCase(ordering, "descending")) {
-        return Comparator.comparing(
-          (JsonObject record) -> getPropertyValue(record, propertyName))
+      if (Strings.CI.contains(ordering, "descending")) {
+        return Comparator.comparing((JsonObject jsonObject) -> getPropertyValue(jsonObject, propertyName))
           .reversed();
+      } else {
+        return Comparator.comparing(jsonObject -> getPropertyValue(jsonObject, propertyName));
       }
-      else {
-        return Comparator.comparing(record -> getPropertyValue(record, propertyName));
-      }
-    }
-    else {
-      return Comparator.comparing(record -> getPropertyValue(record, sort));
+    } else {
+      return Comparator.comparing(jsonObject -> getPropertyValue(jsonObject, sort));
     }
   }
 
@@ -77,7 +78,7 @@ public class FakeCQLToJSONInterpreter {
   }
 
   private Predicate<JsonObject> filterForQuery(String query) {
-    if(StringUtils.isBlank(query)) {
+    if (StringUtils.isBlank(query)) {
       return t -> true;
     }
 
@@ -102,57 +103,51 @@ public class FakeCQLToJSONInterpreter {
             String.join(", ", split)));
 
           String searchField = split[0]
-            .replaceAll("\"", "");
+            .replace("\"", "");
 
           String searchTerm = split[1]
-            .replaceAll("\"", "")
+            .replace("\"", "")
             .replaceAll("\\*", "");
 
-          if(pairText.contains("==")) {
+          if (pairText.contains("==")) {
             return new ImmutableTriple<>(searchField, searchTerm, "==");
-          }
-          else if(pairText.contains("=")) {
+          } else if (pairText.contains("=")) {
             return new ImmutableTriple<>(searchField, searchTerm, "=");
-          }
-          else if(pairText.contains("<>")) {
+          } else if (pairText.contains("<>")) {
             return new ImmutableTriple<>(searchField, searchTerm, "<>");
-          }
-          else if(pairText.contains("<")) {
+          } else if (pairText.contains("<")) {
             return new ImmutableTriple<>(searchField, searchTerm, "<");
-          }
-          else if(pairText.contains(">")) {
+          } else if (pairText.contains(">")) {
             return new ImmutableTriple<>(searchField, searchTerm, ">");
-          }
-          else {
+          } else {
             //Should fail completely
             return new ImmutableTriple<>(searchField, searchTerm, "");
           }
         })
-        .collect(Collectors.toList());
+        .toList();
 
     return consolidateToSinglePredicate(
       pairs.stream()
         .map(pair -> filterByField(pair.getLeft(), pair.getMiddle(), pair.getRight()))
-        .collect(Collectors.toList()), accumulator);
+        .toList(), accumulator);
   }
 
   private Predicate<JsonObject> filterByField(String field, String term, String operator) {
-    return record -> {
+    return dataEntry -> {
       final boolean result;
       final String propertyValue;
 
       if (term == null || field == null) {
         printDiagnostics(() -> "Either term or field are null, aborting filtering");
         return true;
-      }
-      else {
-        propertyValue = getPropertyValue(record, field);
+      } else {
+        propertyValue = getPropertyValue(dataEntry, field);
 
         String cleanTerm = removeBrackets(term);
 
         if (cleanTerm.contains("or")) {
           Collection<String> acceptableValues = Arrays.stream(cleanTerm.split(" or "))
-            .collect(Collectors.toList());
+            .toList();
 
           Predicate<String> predicate = acceptableValues.stream()
             .map(this::filter)
@@ -161,32 +156,21 @@ public class FakeCQLToJSONInterpreter {
 
           result = predicate.test(propertyValue);
         } else {
-          if(propertyValue == null) {
+          if (propertyValue == null) {
             return false;
           }
-          switch (operator) {
-            case "==":
-              result = propertyValue.equals(cleanTerm);
-              break;
-            case "=":
-              result = propertyValue.contains(cleanTerm);
-              break;
-            case "<>":
-              result = !propertyValue.contains(cleanTerm);
-              break;
-            case ">":
-              result = propertyValue.compareTo(cleanTerm) > 0;
-              break;
-            case "<":
-              result = propertyValue.compareTo(cleanTerm) < 0;
-              break;
-            default:
-              result = false;
-          }
+          result = switch (operator) {
+            case "==" -> propertyValue.equals(cleanTerm);
+            case "=" -> propertyValue.contains(cleanTerm);
+            case "<>" -> !propertyValue.contains(cleanTerm);
+            case ">" -> propertyValue.compareTo(cleanTerm) > 0;
+            case "<" -> propertyValue.compareTo(cleanTerm) < 0;
+            default -> false;
+          };
         }
 
         printDiagnostics(() -> String.format("Filtering %s by %s %s %s: %s (value: %s)",
-          record.encodePrettily(), field, operator, term, result, propertyValue));
+          dataEntry.encodePrettily(), field, operator, term, result, propertyValue));
       }
 
       return result;
@@ -201,46 +185,42 @@ public class FakeCQLToJSONInterpreter {
     return v -> v.contains(term);
   }
 
-  private String getPropertyValue(JsonObject record, String field) {
-    //TODO: Should bomb if property does not exist
-    if(field.contains(".")) {
+  private String getPropertyValue(JsonObject jsonRecord, String field) {
+    if (field.contains(".")) {
       String[] fields = field.split("\\.");
 
-      if(!record.containsKey(String.format("%s", fields[0]))) {
+      if (!jsonRecord.containsKey(String.format("%s", fields[0]))) {
         return null;
       }
 
-      return record.getJsonObject(String.format("%s", fields[0]))
+      return jsonRecord.getJsonObject(String.format("%s", fields[0]))
         .getString(String.format("%s", fields[1].trim()));
-    }
-    else {
-      return record.getString(String.format("%s", field.trim()));
+    } else {
+      return jsonRecord.getString(String.format("%s", field.trim()));
     }
   }
 
   private Predicate<JsonObject> consolidateToSinglePredicate(
     Collection<Predicate<JsonObject>> predicates, BinaryOperator<Predicate<JsonObject>> accumulator) {
-
     return predicates.stream().reduce(accumulator).orElse(t -> false);
   }
 
   private ImmutablePair<String, String> splitQueryAndSort(String query) {
-    if(StringUtils.containsIgnoreCase(query, "sortby")) {
-      int sortByIndex = StringUtils.lastIndexOfIgnoreCase(query, "sortby");
+    if (Strings.CI.contains(query, "sortby")) {
+      int sortByIndex = Strings.CI.lastIndexOf(query, "sortby");
 
       String searchOnly = StringUtils.substring(query, 0, sortByIndex).trim();
       String sortOnly = StringUtils.substring(query, sortByIndex + 6).trim();
 
       return new ImmutablePair<>(searchOnly, sortOnly);
-    }
-    else {
+    } else {
       return new ImmutablePair<>(query, "");
     }
   }
 
   private void printDiagnostics(Supplier<String> diagnosticTextSupplier) {
-    if(diagnosticsEnabled) {
-      System.out.println(diagnosticTextSupplier.get());
+    if (diagnosticsEnabled) {
+      LOGGER.info(diagnosticTextSupplier.get());
     }
   }
 }
